--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <!-- Анимация появления картинки -->
-        <img id="mainImage" src="image1.jpg" alt="Картинка 1" class="hidden">
+        <img id="mainImage" src="image1.png" alt="Картинка 1" class="hidden">
         
         <!-- Надпись -->
         <h1 id="mainText" class="hidden">Ты готов к сюрпризу?</h1>
