--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="card">
-        <!-- Анимация появления картинки -->
+        <!-- Первая картинка -->
         <img id="mainImage" src="image1.png" alt="Картинка 1" class="hidden">
+        
+        <!-- Вторая картинка (скрыта изначально) -->
+        <img id="secondImage" src="image2.png" alt="Картинка 2">
         
         <!-- Надпись -->
         <h1 id="mainText" class="hidden">Ты готов к сюрпризу?</h1>
