--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="card">
         <!-- Первая картинка -->
-        <img id="mainImage" src="image1.png" alt="Картинка 1" class="hidden">
+        <img id="mainImage" src="image1.jpg" alt="Картинка 1" class="hidden">
         
         <!-- Вторая картинка (скрыта изначально) -->
-        <img id="secondImage" src="image2.png" alt="Картинка 2">
+        <img id="secondImage" src="image2.jpg" alt="Картинка 2">
         
         <!-- Надпись -->
         <h1 id="mainText" class="hidden">Ты готов к сюрпризу?</h1>
